<resources>
    <string name="app_name">Tabungin</string>
    <string name="title_home">Home</string>
    <string name="title_savings">Saving</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="add_button_description">Add new item</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="forgot_password">forgot_password</string>
    <string name="continue_google">continue_google</string>
    <string name="continue_apple">continue_apple</string>
    <string name="back">back</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password_updated">Password Updated!!</string>
    <string name="password_updated_desc">Your password has been setup successfully</string>
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="create_password">Create Your New Password</string>
    <string name="create_password_desc">Your new password must be different from previous password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="add">add</string>
    <string name="fab">fab</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="tema">Tema</string>
    <string name="language">Bahasa</string>
    <string name="images">user</string>
    <string name="images_name">username</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
</resources>